--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "seamless-immutable": "^7.1.2"
   },
   "devDependencies": {
     "autodll-webpack-plugin": "^0.2.1",
