--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
         "strict": 0,
         "max-len": 0,
         "react/jsx-indent": ["error", 4],
+        "react/jsx-indent-props": ["error", 4],
         "jsx-a11y/href-no-hash": 0,
         "linebreak-style": 0,
         "import/no-extraneous-dependencies": 0,
