--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=dev webpack-dev-server --hot --open",
+    "start": "cross-env NODE_ENV=dev node dev.js",
     "build": "cross-env NODE_ENV=prod webpack -p --progress --colors",
     "test": "jest",
     "test:watch": "npm test -- --watch"
@@ -17,7 +17,6 @@
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "bundle-loader": "^0.5.5",
-    "d3": "^4.10.0",
     "express": "^4.15.3",
     "graceful-fs": "^4.1.11",
     "moment": "^2.18.1",
@@ -28,7 +27,8 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
-    "seamless-immutable": "^7.1.2"
+    "seamless-immutable": "^7.1.2",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "autodll-webpack-plugin": "^0.2.1",
@@ -66,6 +66,7 @@
     "webpack": "^3.3.0",
     "webpack-bundle-analyzer": "^2.8.3",
     "webpack-dev-server": "^2.5.1",
+    "webpack-hot-middleware": "^2.18.2",
     "webpack-manifest-plugin": "^1.1.2",
     "webpack-merge": "^4.1.0",
     "webpack-parallel-uglify-plugin": "^0.4.2"
