--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 {
     "presets": ["react", "es2015", "stage-0"],
-    "plugins": [["import", {
-        "libraryName": "antd",
-        "style": true
-    }]]
+    "plugins": [
+        ["transform-runtime"],
+        ["import", {
+            "libraryName": "antd",
+            "style": true
+        }]
+    ]
 }
