--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,7 @@
         "import"
     ],
     "rules": {
-        "indent": ["error", 4],
+        "indent": [2, 4, { "SwitchCase": 1 }],
         "strict": 0,
         "max-len": 0,
         "react/jsx-indent": ["error", 4],
@@ -34,7 +34,7 @@
         "import/no-extraneous-dependencies": 0,
         "import/newline-after-import": 0,
         "comma-dangle": 0,
-        "no-trailing-spaces": 1,
+        "no-trailing-spaces": 0,
         "eol-last": 0,
         "import/no-dynamic-require": 0,
         "global-require": 0,
@@ -42,6 +42,7 @@
         "no-shadow": 0,
         "import/no-webpack-loader-syntax": 0,
         "import/no-unresolved": 0,
-        "import/extensions": 0
+        "import/extensions": 0,
+        "import/prefer-default-export": 0
     }
 }
