--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "antd": "^2.12.1",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.25.0",
     "bundle-loader": "^0.5.5",
     "express": "^4.15.3",
     "graceful-fs": "^4.1.11",
     "moment": "^2.18.1",
     "qs": "^6.5.0",
     "react": "^15.6.1",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.2",
     "socket.io": "^2.0.3"
   },
@@ -39,6 +42,7 @@
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-import": "^1.2.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
