--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,7 @@
         "import/no-webpack-loader-syntax": 0,
         "import/no-unresolved": 0,
         "import/extensions": 0,
-        "import/prefer-default-export": 0
+        "import/prefer-default-export": 0,
+        "import/first": 0
     }
 }
