--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
         ["transform-runtime"],
         ["import", {
             "libraryName": "antd",
-            "style": true
+            "style": "css"
         }]
     ]
 }
