--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.25.0",
     "bundle-loader": "^0.5.5",
+    "connect-history-api-fallback": "^1.3.0",
     "express": "^4.15.3",
     "graceful-fs": "^4.1.11",
     "moment": "^2.18.1",
