--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
-    "seamless-immutable": "^7.1.2"
+    "seamless-immutable": "^7.1.2",
+    "xlsx": "^0.11.3"
   },
   "devDependencies": {
     "autodll-webpack-plugin": "^0.2.1",
