--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=dev webpack-dev-server --hot --open",
+    "start": "cross-env NODE_ENV=dev webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=prod webpack -p --progress --colors",
     "test": "jest",
     "test:watch": "npm test -- --watch"
@@ -29,8 +29,7 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
-    "seamless-immutable": "^7.1.2",
-    "webpack-dashboard": "^1.0.0-5"
+    "seamless-immutable": "^7.1.2"
   },
   "devDependencies": {
     "autodll-webpack-plugin": "^0.2.1",
